consolidated plot_counts_on_channel and waveform_plotter

--- a/pGRAMS Readout Analysis.ipynb
+++ b/pGRAMS Readout Analysis.ipynb
@@ -110,7 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# can possibly remove plot_counts_on_channel if waveform_plotter looks good to you"
+    "# can possibly delete plot_counts_on_channel now if waveform_plotter looks good to you"
    ]
   },
   {
